web/src/app/menu/menu.component.css
.app-container {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.app-is-mobile .app-toolbar {
  position: fixed;
  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
  z-index: 2;
}

h1.app-app-name {
  margin-left: 8px;
}

.app-sidenav-container {
  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
  flex: 1;
  margin-top: 4px;
}

.app-is-mobile .app-sidenav-container {
  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
     `<body>` to be our scrolling element for mobile layouts. */
  flex: 1 0 auto;
}

.app-toolbar {
  justify-content: space-between;
}

.search-container {
  background-color: white;
  display: flex;
  flex-flow: row wrap;
  border-radius: 5px;
  float: right;
}

.search-input {
  display: inline-block;
  width: 80%;
  color: black;
  margin: 0 5px;
}

.search-icon {
  color: grey;
  font-size: 30px;
  cursor: pointer;
}

.side-nav {
  width: 300px;
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: center;
}

.list-container {
  width: 100%;
  background-color: #eeeeee;
  cursor: pointer;
  margin: 10px;
}

.list-container:hover {
  background-color: #dddddd;
}

.list-container:active {
  background-color: #cccccc;
}

.portrait {
  margin: 10px;
  border-radius: 50%;
}

